Add flexed height to flex-cards

--- a/orion-ui/src/styles/components/global-filter--filter-menu.scss
+++ b/orion-ui/src/styles/components/global-filter--filter-menu.scss
@@ -36,6 +36,14 @@
   }
 }
 
+.flex-card {
+  height: unset !important;
+
+  > ::v-deep(div) {
+    height: 100% !important;
+  }
+}
+
 .filter-button {
   align-items: center;
   background-color: $white;
