--- a/orion-ui/src/styles/views/flow-run/index.scss
+++ b/orion-ui/src/styles/views/flow-run/index.scss
@@ -2,9 +2,14 @@
 @use 'sass:map';
 
 .run-state {
+  display: inline-block;
+  font-family: barlow;
+  font-size: 13px;
+  height: 20px;
   border-radius: 4px;
-  padding: 2px 8px;
+  padding: 0 8px;
   text-transform: capitalize;
+  align-self: center;
 }
 
 .result-badge {
