Changes partnership integration callout to verified task callout

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -696,7 +696,7 @@ div[class~="language-json"]
         margin-right 12px
         width 24px
 
-.partnership-integration
+.verified-task
     display flex
     margin-bottom 48px
     margin-top 12px
