Only show underline on hover

--- a/orion-ui/src/styles/views/flow-run/index.scss
+++ b/orion-ui/src/styles/views/flow-run/index.scss
@@ -74,6 +74,14 @@
   height: 2px;
 }
 
+a {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 @media (max-width: map.get($breakpoints, 'md')) {
   .main-grid {
     grid-template-areas:
