Orion code fixes to support code sharing with Nebula

--- a/orion-ui/src/styles/components/button--card.scss
+++ b/orion-ui/src/styles/components/button--card.scss
@@ -7,7 +7,7 @@
   background: none;
   border: none;
   height: min-content;
-  width: min-content;
+  width: 100%;
 
   .button-card-content {
     background-color: $white;
